<resources>
    <string name="app_name">ServiCare</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_have_an_account_click_here">Already have an account? Click here</string>
    <string name="register">Register</string>
    <string name="email"> Email</string>
    <string name="password"> Password</string>
    <string-array name="options">
        <item>-Select-</item>
        <item>User</item>
        <item>Service Provider</item>
    </string-array>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_home">Home</string>
    <string name="title_inbox">Inbox</string>
    <string name="title_search">Search</string>
    <string name="title_jobs">Jobs</string>
    <string name="title_profile">Profile</string>
    <string name="create_job">Create Job</string>
    <string name="enter_job_title">Enter job title</string>
    <string name="description">Description</string>
    <string name="budget">Budget</string>
    <string name="time">Time</string>
    <string name="title">Title:</string>
    <string name="support">Briefly explain how can we help you!</string>
    <string name="feedback">Your valuable feedback here</string>
    <string name="new_password">New Password</string>
    <string name="old_password">Old Password</string>
    <string name="subject">Subject</string>
</resources>